--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html long="pt-br">
-<Head> <meta charset="UTF-8">
-</Head>
+<head> 
+    <meta charset="UTF-8">
+    <title>minha pagina ueb</title>
+<head>
 
+<body> 
+<h1 style="text-align: center;"> 
+<pstyle=  text-align center;style="font-size:2ppx"> 
+
+
+
+</pstyle>
+
+
+
+</h1>
+</body>
 
 
 
